daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N20_missing_required_log/h1.hex
9bfd0ec5300ca4377cf13e9f046108ece7277385b415053456225c2e8be5cf853bee6b1bc99883f9b234b220ee1f432fc77ac090f767b846424fd8ccc7020076
